reposicionamento da imagem e correção do rodapé

--- a/projetos individuais/projeto pecing/index.html
+++ b/projetos individuais/projeto pecing/index.html
@@ -32,7 +32,7 @@
                 <h2>Meu trabalho</h2>
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae asperiores labore, animi ex quis omnis optio aliquam nulla. Deleniti soluta dolore quaerat temporibus nihil voluptatem aliquam quasi vitae aperiam.</p>
-                
+
                 <a href="#" class="botao">Clique Aqui</a>
 
             </div>
@@ -45,9 +45,9 @@
     <footer>
         <p>Criado por Pecing</p>
         <nav class="footer-links">
-            <a href="#">Youtube</a>
-            <a href="#">Istagram</a>
-            <a href="#">Twitter</a>
+            <a href="https://www.youtube.com/@lilpecing" rel="noopener" target="_blank">Youtube</a>
+            <a href="https://www.instagram.com/lilpecing" rel="noopener" target="_blank">Instagram</a>
+            <a href="https://www.twitter.com/lilpecing" rel="noopener" target="_blank">Twitter</a>
         </nav>
     </footer>
     
