--- a/projetos individuais/projeto pecing/index.html
+++ b/projetos individuais/projeto pecing/index.html
@@ -5,51 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Pecing</title>
+    <title>PECING</title>
 </head>
 <body>
     <header>
-        <h1>Pecing</h1>
-    </header>
-    <nav class="navegacao">
-        <a href="index.html">Home</a>
-        <a href="#">Contato</a>
-        <a href="#">Biografia</a>
-    </nav>
-    <main>
-        <div class="caixas">
-
-            <div class="caixa-apresentacao">
-
-                <h2>Quem sou eu?</h2>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla inventore necessitatibus pariatur, delectus expedita placeat corrupti vitae obcaecati! Explicabo dolor porro odit sequi cupiditate voluptates deleniti labore sed natus nihil.</p>
-
-            </div>
-
-            <div class="caixa-trabalho">
-
-                <h2>Meu trabalho</h2>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae asperiores labore, animi ex quis omnis optio aliquam nulla. Deleniti soluta dolore quaerat temporibus nihil voluptatem aliquam quasi vitae aperiam.</p>
-
-                <a href="#" class="botao">Clique Aqui</a>
-
-            </div>
-            
-        </div>
-
-        <img src="imagens/pecing-foto.jpeg" alt="Foto de Pecing" class="foto-pecing">
-
-    </main>
-    <footer>
-        <p>Criado por Pecing</p>
-        <nav class="footer-links">
-            <a href="https://www.youtube.com/@lilpecing" rel="noopener" target="_blank">Youtube</a>
-            <a href="https://www.instagram.com/lilpecing" rel="noopener" target="_blank">Instagram</a>
-            <a href="https://www.twitter.com/lilpecing" rel="noopener" target="_blank">Twitter</a>
+        <h1 class="cabecalho-titulo">PECING</h1>
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item" href="#">Home</a>
+            <a class="cabecalho-menu-item" href="#">Contato</a>
         </nav>
+    </header>
+
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h2 class="conteudo-principal-escrito-titulo">Quem sou eu?</h2>
+                <p class="conteudo-principal-escrito-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque molestias dolor a error libero, quas deserunt eos quod aliquam cum neque odio velit dolores unde autem, commodi, saepe cumque.</p>
+            </div>
+                    <img class="foto-pecing" src="imagens/pecing-foto.jpeg" alt="Foto de Pecing">
+        </section>
+
+        <section class="conteudo-secundario">
+            <h2 class="conteudo-secundario-titulo">Meu trabalho</h2>
+            <p class="conteudo-secundario-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ipsa ullam repudiandae, doloremque voluptatum sint necessitatibus delectus vero nihil aliquid, quisquam suscipit sequi est ipsum! Modi dolorem recusandae explicabo corporis!</p>
+            <button class="conteudo-secundario-botao">Clique aqui</button>
+        </section>
+    </main>
+
+    <footer class="rodape">
+        <p class="rodape-credito">Criado por Lucas Perecin</p>
     </footer>
-    
 </body>
 </html>
