--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -31,6 +31,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus repellat asperiores quia perspiciatis eum voluptatum sapiente ullam dicta tempore fuga nemo at, non harum consequatur delectus deserunt repudiandae quod eveniet.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa amet nam, excepturi aliquid, cum laudantium quidem voluptatum sint est ut delectus sed, laboriosam optio. Enim nesciunt quae maiores doloribus voluptatum?</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, provident, dignissimos rem eius veritatis sed facere odit, architecto dolorum vitae nostrum deleniti optio repudiandae necessitatibus quae iusto pariatur recusandae atque.</p>
+        
     </main>
 </body>
 </html>
