--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -19,13 +19,13 @@
 
         <!-- Tamanho padrão 300x150 -->
 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500" scrolling="no"></iframe>
+        <iframe title="cursoemvideo" src="https://www.cursoemvideo.com" frameborder="0" height="500" scrolling="no"></iframe>
 
         para aprender a programar.
     </p>
 
     <p>
-        O site do Pecing <iframe src="https://pecing.github.io/projeto-android" frameborder="0"><a href="#"></a></iframe> também é mt legal
+        O site do Pecing <iframe title="projeto android" src="https://pecing.github.io/projeto-android" frameborder="0"><a href="#"></a></iframe> também é mt legal
     </p>
 </body>
 </html>
