--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -10,7 +10,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, eligendi! Iste, officia accusamus assumenda, unde ducimus, labore itaque quo incidunt error quidem pariatur ea dicta porro eveniet ut sequi eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit distinctio quo esse modi unde dicta, nihil cum. Minus harum enim, error a consequatur cum eos corrupti beatae, laudantium labore fugiat? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa commodi et sapiente voluptate eligendi, aliquam magni. Nobis iure molestiae perspiciatis nulla, rem quae dicta omnis sit corrupti consectetur ad tenetur!</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe title="pag001" src="pages/pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, eligendi! Iste, officia accusamus assumenda, unde ducimus, labore itaque quo incidunt error quidem pariatur ea dicta porro eveniet ut sequi eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit distinctio quo esse modi unde dicta, nihil cum. Minus harum enim, error a consequatur cum eos corrupti beatae, laudantium labore fugiat? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa commodi et sapiente voluptate eligendi, aliquam magni. Nobis iure molestiae perspiciatis nulla, rem quae dicta omnis sit corrupti consectetur ad tenetur!</p>
 </body>
