--- a/projetos individuais/projeto pecing/index.html
+++ b/projetos individuais/projeto pecing/index.html
@@ -5,35 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>PECING</title>
+    <title>Pecing - Sobre mim</title>
 </head>
 <body>
-    <header>
-        <h1 class="cabecalho-titulo">PECING</h1>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="imagens/foto-cabecalho.png" alt="Desenho de Pecing">
+        <h1 class="cabecalho-titulo">Pecing</h1>
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="#">Home</a>
-            <a class="cabecalho-menu-item" href="#">Contato</a>
+            <a class="cabecalho-menu-item" href="#">home</a>
+            <a class="cabecalho-menu-item" href="#">contato</a>
         </nav>
     </header>
-
     <main class="conteudo">
         <section class="conteudo-principal">
-            <div class="conteudo-principal-escrito">
-                <h2 class="conteudo-principal-escrito-titulo">Quem sou eu?</h2>
-                <p class="conteudo-principal-escrito-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque molestias dolor a error libero, quas deserunt eos quod aliquam cum neque odio velit dolores unde autem, commodi, saepe cumque.</p>
-            </div>
-                    <img class="foto-pecing" src="imagens/pecing-foto.jpeg" alt="Foto de Pecing">
-        </section>
+            <div class="conteudo-principal-texto">
+                <h2 class="conteudo-principal-texto-titulo">Sobre mim</h2>
+                <p class="conteudo-principal-texto-paragrafo">
+                    Meu nome é Lucas Perecin, tenho 17 anos e estou estudando HTML e CSS, mostrando paixão por aprender desenvolvimento web. Além disso, tenho uma paixão pela música, assim, cantando, compondo e produzindo minhas músicas sozinho. <br>
+                    Clique no botão abaixo para ver e ouvir meu trabalho 👇
+                </p>
 
-        <section class="conteudo-secundario">
-            <h2 class="conteudo-secundario-titulo">Meu trabalho</h2>
-            <p class="conteudo-secundario-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ipsa ullam repudiandae, doloremque voluptatum sint necessitatibus delectus vero nihil aliquid, quisquam suscipit sequi est ipsum! Modi dolorem recusandae explicabo corporis!</p>
-            <button class="conteudo-secundario-botao">Clique aqui</button>
+                <a href="https://linktr.ee/pecing"><button class="conteudo-principal-texto-botao" type="button">CLIQUE AQUI</button></a>
+
+            </div>
+
+            <img class="conteudo-principal-imagem" src="imagens/foto-pecing.jpg" alt="Foto de Lucas Perecin, mais conhecido como 'Pecing'">
+
         </section>
     </main>
 
     <footer class="rodape">
-        <p class="rodape-credito">Criado por Lucas Perecin</p>
+        <p class="rodape-creditos">criado por pecing.</p>
     </footer>
 </body>
 </html>
